[MacViews] Clamp minimum browser size to match Cocoa

Constants and logic brought over from chrome/browser/ui/cocoa/browser_window_controller.h

Bug: 827199
Change-Id: Ida44f197ba2039c060824b1dcf247c889d99b470
Reviewed-on: https://chromium-review.googlesource.com/1005001
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Leonard Grey <lgrey@chromium.org>
Cr-Commit-Position: refs/heads/master@{#549634}
Former-commit-id: 9d718f7d6d3e8730d729d17702a5cd23de3f2397